fix: cleanup spacing on architectures under development

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -75,6 +75,8 @@
 
 .card.disabled::after {
   content: "🛠 under development 🛠";
+  font-size: smaller;
+  font-weight: bold;
 }
 
 .card.disabled:hover {
